<?xml version="1.0"?>
<package>
  <name>sba</name>
  <version>1.0.1</version>
  <description>Sparse bundle adjustment and Sparse pose adjustment.</description>
  <maintainer email="luca.marchionni@pal-robotics.com">Luca Marchionni</maintainer>
  <author>Kurt Konolige</author>
  <license>BSD</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>catkin</build_depend>
  <build_depend>bpcg</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>bpcg</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>suitesparse</run_depend>
  <run_depend>eigen</run_depend>

  <!-- REMOVE THIS! -->
  <export>
    <cpp cflags="-DSBA_CHOLMOD -I${prefix}/include -I${prefix}/msg/cpp" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lsba -lsba_vis"/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
